Commit refatoracao user service e otmizacao de utilizacaobde memoria, infra